# Gesturism-jaclynpqc

./: .gitignore  README.md  index.html  log.md  pyproject.toml
Tracking/: HandTrackingMin.py  HandTrackingModule.py
demo/: HandTrackingModule.py  VirtualPainter.py
demo/Tracking/tracking component/: style.css
gesturism/: package-lock.json  package.json
gesturism/src/: App.jsx
gesturism/src/components/: CameraView.jsx  PoseDetection(Complex).js  index.js  utilities.js
gesturism/src/components/Camera/: Camera.jsx  useCamera.js
gesturism/src/components/Canvas/: Canvas.jsx  useCanvas.js
gesturism/src/components/Contexts/: PaintContext.jsx
gesturism/src/components/Layout/: Layout.jsx
gesturism/src/components/PoseDetection/: PoseDetection.jsx  usePoseDetection.js
gesturism/src/components/Settings/: BrushSelector.jsx  Settings.jsx  TrackingSelector.jsx
gesturism/src/components/Utils/: brushes.js  colors.js
gesturism/src/hooks/: useGestureDetection.js
proof-of-concept/: ColorTracker.pde
